--- a/requirements.txt
+++ b/requirements.txt
@@ -1,61 +1,61 @@
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.0
-Bottleneck @ file:///C:/b/abs_816hr2khp1/croot/bottleneck_1731058648110/work
-Brotli @ file:///D:/bld/brotli-split_1666788538925/work
-certifi @ file:///C:/miniconda3/conda-bld/certifi_1759786080784/work/certifi
-cffi @ file:///D:/bld/cffi_1725560792189/work
-charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1754767332901/work
+Bottleneck
+Brotli
+certifi
+cffi
+charset-normalizer
 click==8.1.8
 colorama==0.4.6
 distro==1.9.0
 dotenv==0.9.9
 exceptiongroup==1.3.1
 fastapi==0.124.4
-filelock @ file:///home/conda/feedstock_root/build_artifacts/filelock_1755216263872/work
+filelock
 fsspec==2025.10.0
 h11==0.16.0
-h2 @ file:///home/conda/feedstock_root/build_artifacts/h2_1738578511449/work
-hpack @ file:///home/conda/feedstock_root/build_artifacts/hpack_1737618293087/work
+h2
+hpack
 httpcore==1.0.9
 httpx==0.28.1
 huggingface-hub==0.36.0
-hyperframe @ file:///home/conda/feedstock_root/build_artifacts/hyperframe_1737618333194/work
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1733211830134/work
-Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1741263328855/work
+hyperframe
+idna
+Jinja2
 jiter==0.12.0
 joblib==1.5.2
-MarkupSafe @ file:///D:/bld/markupsafe_1733219648915/work
+MarkupSafe
 mkl-service==2.4.0
-mkl_fft @ file:///C:/Users/dev-admin/mkl/mkl_fft_1730823082242/work
-mkl_random @ file:///C:/Users/dev-admin/mkl/mkl_random_1730822522280/work
-mpmath @ file:///home/conda/feedstock_root/build_artifacts/mpmath_1733302684489/work
-networkx @ file:///home/conda/feedstock_root/build_artifacts/networkx_1698504735452/work
-numexpr @ file:///C:/b/abs_05o8p7bfml/croot/numexpr_1730215959182/work
-numpy @ file:///C:/b/abs_c1ywpu18ar/croot/numpy_and_numpy_base_1708638681471/work/dist/numpy-1.26.4-cp39-cp39-win_amd64.whl#sha256=f284633067fde4bb078a09085a1c9e99a3218c129f5312b7b3d76c9340442a25
+mkl_fft
+mkl_random
+mpmath
+networkx
+numexpr
+numpy==1.26.4
 openai==2.13.0
 packaging==25.0
-pandas @ file:///C:/miniconda3/conda-bld/pandas_1759822263878/work/dist/pandas-2.3.3-cp39-cp39-win_amd64.whl#sha256=8731d094af0d7ded620cab9038fd19f5491597bbb94d358604bb09379f35b1ee
-pillow @ file:///D:/bld/pillow_1751481993665/work
+pandas==2.3.3
+pillow
 pyarrow==11.0.0
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_pycparser_1733195786/work
+pycparser
 pydantic==2.12.5
 pydantic_core==2.41.5
-PySocks @ file:///D:/bld/pysocks_1733217287171/work
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_python-dateutil_1751104122/work
+PySocks
+python-dateutil
 python-dotenv==1.2.1
-pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1742920838005/work
-PyYAML @ file:///D:/bld/pyyaml_1737454672828/work
+pytz
+PyYAML
 regex==2025.11.3
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1755614211359/work
+requests
 safetensors==0.7.0
 scikit-learn==1.6.1
 scipy==1.13.1
 sentence-transformers==5.1.2
-six @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_six_1753199211/work
+six
 sniffio==1.3.1
 starlette==0.49.3
-sympy @ file:///home/conda/feedstock_root/build_artifacts/sympy_1745946057943/work
+sympy
 threadpoolctl==3.6.0
 tokenizers==0.22.1
 torch==2.4.1
@@ -64,9 +64,9 @@ torchvision==0.19.1
 tqdm==4.67.1
 transformers==4.57.3
 typing-inspection==0.4.2
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_typing_extensions_1751643513/work
-tzdata @ file:///home/conda/feedstock_root/build_artifacts/python-tzdata_1742745135198/work
-urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1750271362675/work
+typing_extensions
+tzdata
+urllib3
 uvicorn==0.38.0
-win_inet_pton @ file:///D:/bld/win_inet_pton_1733130564612/work
+win_inet_pton
 zstandard==0.23.0
